// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs test suite: Page 1`] = `
<div
  className="MuiBox-root css-0"
>
  <div
    className="MuiTabs-root css-1ujnqem-MuiTabs-root"
    data-cy="tabs"
  >
    <div
      className="MuiTabs-scroller MuiTabs-fixed css-jpln7h-MuiTabs-scroller"
      onScroll={[Function]}
      style={
        {
          "marginBottom": -0,
          "overflow": "hidden",
        }
      }
    >
      <div
        aria-orientation={null}
        className="MuiTabs-flexContainer css-heg063-MuiTabs-flexContainer"
        onKeyDown={[Function]}
        role="tablist"
      >
        <button
          aria-selected={true}
          className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Mui-selected css-1h9z7r5-MuiButtonBase-root-MuiTab-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="tab"
          tabIndex={0}
          type="button"
        >
          PAGE1
          <span
            className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
        <button
          aria-selected={false}
          className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary css-1h9z7r5-MuiButtonBase-root-MuiTab-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="tab"
          tabIndex={-1}
          type="button"
        >
          PAGE2
          <span
            className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
      <span
        className="MuiTabs-indicator css-1aquho2-MuiTabs-indicator"
        style={
          {
            "left": 0,
            "width": 0,
          }
        }
      />
    </div>
  </div>
  <div
    aria-labelledby="horizontal-tab-0"
    id="simple-tabpanel-0"
    role="tabpanel"
    style={
      {
        "padding": 8,
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`Tabs test suite: Wrapped 1`] = `
<div
  className="MuiBox-root css-0"
>
  <div
    className="MuiTabs-root css-1ujnqem-MuiTabs-root"
    data-cy="tabs"
  >
    <div
      className="MuiTabs-scroller MuiTabs-fixed css-jpln7h-MuiTabs-scroller"
      onScroll={[Function]}
      style={
        {
          "marginBottom": -0,
          "overflow": "hidden",
        }
      }
    >
      <div
        aria-orientation={null}
        className="MuiTabs-flexContainer css-heg063-MuiTabs-flexContainer"
        onKeyDown={[Function]}
        role="tablist"
      >
        <button
          aria-selected={true}
          className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Mui-selected css-1h9z7r5-MuiButtonBase-root-MuiTab-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="tab"
          tabIndex={0}
          type="button"
        >
          PAGE1
          <span
            className="MuiTabs-indicator css-1aquho2-MuiTabs-indicator"
            style={{}}
          />
        </button>
        <button
          aria-selected={false}
          className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary MuiTab-wrapped css-zx9imm-MuiButtonBase-root-MuiTab-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="tab"
          tabIndex={-1}
          type="button"
        >
          PAGE2
        </button>
      </div>
    </div>
  </div>
  <div
    aria-labelledby="horizontal-tab-0"
    id="simple-tabpanel-0"
    role="tabpanel"
    style={
      {
        "padding": 8,
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`Tabs test suite: children 1`] = `
<div
  className="MuiBox-root css-0"
>
  <div
    className="MuiTabs-root css-1ujnqem-MuiTabs-root"
    data-cy="tabs"
  >
    <div
      className="MuiTabs-scroller MuiTabs-fixed css-jpln7h-MuiTabs-scroller"
      onScroll={[Function]}
      style={
        {
          "marginBottom": -0,
          "overflow": "hidden",
        }
      }
    >
      <div
        aria-orientation={null}
        className="MuiTabs-flexContainer css-heg063-MuiTabs-flexContainer"
        onKeyDown={[Function]}
        role="tablist"
      >
        <button
          aria-selected={true}
          className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Mui-selected css-1h9z7r5-MuiButtonBase-root-MuiTab-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="tab"
          tabIndex={0}
          type="button"
        >
          PAGE1
          <span
            className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
      <span
        className="MuiTabs-indicator css-1aquho2-MuiTabs-indicator"
        style={
          {
            "left": 0,
            "width": 0,
          }
        }
      />
    </div>
  </div>
  <div
    aria-labelledby="horizontal-tab-0"
    id="simple-tabpanel-0"
    role="tabpanel"
    style={
      {
        "padding": 8,
        "width": "100%",
      }
    }
  >
    Children
  </div>
</div>
`;

exports[`Tabs test suite: color 1`] = `
<div
  className="MuiBox-root css-0"
>
  <div
    className="MuiTabs-root css-1ujnqem-MuiTabs-root"
    data-cy="tabs"
  >
    <div
      className="MuiTabs-scrollableX MuiTabs-hideScrollbar css-agdkjh-MuiTabs-scrollbarSize"
      style={
        {
          "height": 99,
          "overflow": "scroll",
          "position": "absolute",
          "top": -9999,
          "width": 99,
        }
      }
    />
    <div
      className="MuiTabs-scroller MuiTabs-hideScrollbar MuiTabs-scrollableX css-69z67c-MuiTabs-scroller"
      onScroll={[Function]}
      style={
        {
          "marginBottom": -0,
          "overflow": "hidden",
        }
      }
    >
      <div
        aria-orientation={null}
        className="MuiTabs-flexContainer css-heg063-MuiTabs-flexContainer"
        onKeyDown={[Function]}
        role="tablist"
      >
        <button
          aria-selected={true}
          className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Mui-selected css-1h9z7r5-MuiButtonBase-root-MuiTab-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="tab"
          tabIndex={0}
          type="button"
        >
          PAGE
          <span
            className="MuiTabs-indicator css-1aquho2-MuiTabs-indicator"
            style={{}}
          />
        </button>
      </div>
    </div>
  </div>
  <div
    aria-labelledby="horizontal-tab-0"
    id="simple-tabpanel-0"
    role="tabpanel"
    style={
      {
        "padding": 8,
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`Tabs test suite: orientation 1`] = `
<div
  className="MuiBox-root css-k008qs"
>
  <div
    className="MuiTabs-root MuiTabs-vertical css-1g4ac1o-MuiTabs-root"
    data-cy="tabs"
  >
    <div
      className="MuiTabs-scroller MuiTabs-fixed css-jpln7h-MuiTabs-scroller"
      onScroll={[Function]}
      style={
        {
          "marginRight": -0,
          "overflow": "hidden",
        }
      }
    >
      <div
        aria-orientation="vertical"
        className="MuiTabs-flexContainer MuiTabs-flexContainerVertical css-lfwcke-MuiTabs-flexContainer"
        onKeyDown={[Function]}
        role="tablist"
      >
        <button
          aria-selected={true}
          className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Mui-selected css-1h9z7r5-MuiButtonBase-root-MuiTab-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="tab"
          tabIndex={0}
          type="button"
        >
          PAGE1
          <span
            className="MuiTabs-indicator css-10d9dml-MuiTabs-indicator"
            style={{}}
          />
        </button>
      </div>
    </div>
  </div>
  <div
    aria-labelledby="vertical-tab-0"
    id="simple-tabpanel-0"
    role="tabpanel"
    style={
      {
        "padding": 8,
        "width": "100%",
      }
    }
  />
</div>
`;
